--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="slide">
 	<div class="slide2">
 		<figure>
-			<img src="ellie.jpg" width="200">
+			<img src="ellie.jpg" width="200" height="200">
 		<figcaption>Our first family pet, Ellie.
 		</figcaption>
 	</figure>
